--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <li><a target="_self" href="game-40.html">Neo Stazzy City<small> (2025-09-07)</small></a></li>
 <li><a target="_self" href="game-41.html">Bob-omb Beach<small> (2025-09-10)</small></a></li>
 <li><a target="_self" href="game-42.html">Find It. Then Destroy It, Jim.<small> (2025-09-19)</small></a></li>
+<li><a target="_self" href="game-43.html">Fly Guy Forest<small> (2025-10-08)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
