--- a/map-3.html
+++ b/map-3.html
@@ -16,7 +16,7 @@
 <tr>
 <td><p><a target="_self" href="game-40.html"><img src="OpenStar.png" width="64px" height="64px"></a> Neo Stazzy City</p></td>
 <td><p><a target="_self" href="game-41.html"><img src="BossStar.png" width="64px" height="64px"></a> Bob-omb Beach</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 3</p></td>
+<td><p><a target="_self" href="game-43.html"><img src="OpenStar.png" width="64px" height="64px"></a> Fly Guy Forest</p></td>
 </tr>
 <tr>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 4</p></td>
@@ -37,31 +37,6 @@
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 13</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 14</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 15</p></td>
-</tr>
-<tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 16</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 17</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 18</p></td>
-</tr>
-<tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 19</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 20</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 21</p></td>
-</tr>
-<tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 22</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 23</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 24</p></td>
-</tr>
-<tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 25</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 26</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 27</p></td>
-</tr>
-<tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 28</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 29</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 30</p></td>
 </tr>
 </table>
 </div>
