--- a/map-3.html
+++ b/map-3.html
@@ -19,7 +19,7 @@
 <td><p><a target="_self" href="game-43.html"><img src="OpenStar.png" width="64px" height="64px"></a> Fly Guy Forest</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 4</p></td>
+<td><p><a target="_self" href="game-44.html"><img src="OpenStar.png" width="64px" height="64px"></a> Goomba Garden</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 5</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 6</p></td>
 </tr>
