--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <li><a target="_self" href="game-42.html">Find It. Then Destroy It, Jim.<small> (2025-09-19)</small></a></li>
 <li><a target="_self" href="game-43.html">Fly Guy Forest<small> (2025-10-08)</small></a></li>
 <li><a target="_self" href="game-44.html">Goomba Garden<small> (2025-10-12)</small></a></li>
+<li><a target="_self" href="game-45.html">Koopa Castle<small> (2025-10-12)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
