--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <li><a target="_self" href="game-43.html">Fly Guy Forest<small> (2025-10-08)</small></a></li>
 <li><a target="_self" href="game-44.html">Goomba Garden<small> (2025-10-12)</small></a></li>
 <li><a target="_self" href="game-45.html">Koopa Castle<small> (2025-10-12)</small></a></li>
+<li><a target="_self" href="game-46.html">Piranha Planets<small> (2025-11-17)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
