--- a/map-3.html
+++ b/map-3.html
@@ -21,7 +21,7 @@
 <tr>
 <td><p><a target="_self" href="game-44.html"><img src="OpenStar.png" width="64px" height="64px"></a> Goomba Garden</p></td>
 <td><p><a target="_self" href="game-45.html"><img src="BossStar.png" width="64px" height="64px"></a> Koopa Castle</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 6</p></td>
+<td><p><a target="_self" href="game-46.html"><img src="OpenStar.png" width="64px" height="64px"></a> Piranha Planets</p></td>
 </tr>
 <tr>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 7</p></td>
