--- a/map-3.html
+++ b/map-3.html
@@ -24,7 +24,7 @@
 <td><p><a target="_self" href="game-46.html"><img src="OpenStar.png" width="64px" height="64px"></a> Piranha Planets</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 7</p></td>
+<td><p><a target="_self" href="game-47.html"><img src="BossStar.png" width="64px" height="64px"></a> Whomp Wharf</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 8</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Course 9</p></td>
 </tr>
