--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <li><a target="_self" href="game-45.html">Koopa Castle<small> (2025-10-12)</small></a></li>
 <li><a target="_self" href="game-46.html">Piranha Planets<small> (2025-11-17)</small></a></li>
 <li><a target="_self" href="game-47.html">Whomp Wharf<small> (2025-11-18)</small></a></li>
+<li><a target="_self" href="game-48.html">Frozen Flora<small> (2025-11-19)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
