--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <li><a target="_self" href="game-46.html">Piranha Planets<small> (2025-11-17)</small></a></li>
 <li><a target="_self" href="game-47.html">Whomp Wharf<small> (2025-11-18)</small></a></li>
 <li><a target="_self" href="game-48.html">Frozen Flora<small> (2025-11-19)</small></a></li>
+<li><a target="_self" href="game-49.html">Enigmatic Estate<small> (2025-11-19)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
