--- a/map-3.html
+++ b/map-3.html
@@ -29,7 +29,7 @@
 <td><p><a target="_self" href="game-49.html"><img src="BossStar.png" width="64px" height="64px"></a> Enigmatic Estate</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Pokey Pyramids</p></td>
+<td><p><a target="_self" href="game-50.html"><img src="OpenStar.png" width="64px" height="64px"></a> Pokey Pyramids</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Chuckya Chateau</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Rainbow Row</p></td>
 </tr>
