--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <li><a target="_self" href="game-48.html">Frozen Flora<small> (2025-11-19)</small></a></li>
 <li><a target="_self" href="game-49.html">Enigmatic Estate<small> (2025-11-19)</small></a></li>
 <li><a target="_self" href="game-50.html">Pokey Pyramids<small> (2025-11-22)</small></a></li>
+<li><a target="_self" href="game-51.html">Chuckya Chateau<small> (2025-11-23)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
