--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <li><a target="_self" href="game-50.html">Pokey Pyramids<small> (2025-11-22)</small></a></li>
 <li><a target="_self" href="game-51.html">Chuckya Chateau<small> (2025-11-23)</small></a></li>
 <li><a target="_self" href="game-52.html">Rainbow Rows<small> (2025-11-30)</small></a></li>
+<li><a target="_self" href="game-53.html">Motos Mountain<small> (2025-12-05)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
