--- a/map-3.html
+++ b/map-3.html
@@ -34,7 +34,7 @@
 <td><p><a target="_self" href="game-52.html"><img src="BossStar.png" width="64px" height="64px"></a> Rainbow Rows</p></td>
 </tr>
 <tr>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Motos Mountain</p></td>
+<td><p><a target="_self" href="game-53.html"><img src="BossStar.png" width="64px" height="64px"></a> Motos Mountain</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> Big Chilly Chess</p></td>
 <td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> TV Tower Terror</p></td>
 </tr>
