--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 <li><a target="_self" href="game-52.html">Rainbow Rows<small> (2025-11-30)</small></a></li>
 <li><a target="_self" href="game-53.html">Motos Mountain<small> (2025-12-05)</small></a></li>
 <li><a target="_self" href="game-54.html">Chief Chilly Chess<small> (2025-12-05)</small></a></li>
+<li><a target="_self" href="game-55.html">Television Tower Terror<small> (2025-12-07)</small></a></li>
+<li><a target="_self" href="game-56.html">Bumper 64 3<small> (2025-12-07)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
