--- a/map-3.html
+++ b/map-3.html
@@ -36,7 +36,7 @@
 <tr>
 <td><p><a target="_self" href="game-53.html"><img src="BossStar.png" width="64px" height="64px"></a> Motos Mountain</p></td>
 <td><p><a target="_self" href="game-54.html"><img src="BossStar.png" width="64px" height="64px"></a> Chief Chilly Chess</p></td>
-<td><p><a target="_self" href="#"><img src="ClosedStar.png" width="64px" height="64px"></a> TV Tower Terror</p></td>
+<td><p><a target="_self" href="game-55.html"><img src="FinalStar.png" width="64px" height="64px"></a> Television Tower Terror</p></td>
 </tr>
 </table>
 </div>
