--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <li><a target="_self" href="game-55.html">Television Tower Terror<small> (2025-12-07)</small></a></li>
 <li><a target="_self" href="game-56.html">Bumper 64 3<small> (2025-12-07)</small></a></li>
 <li><a target="_self" href="game-57.html">The King Of Fighters GO Sardonyx Edition<small> (2026-01-05)</small></a></li>
+<li><a target="_self" href="game-58.html">Free Roam<small> (2026-01-20)</small></a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
